--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -5,4 +5,8 @@
     <item android:id="@+id/menu_search" android:icon="@drawable/ic_search"
         app:showAsAction="always"
         android:title="搜索"/>
+
+    <item android:id="@+id/menu_share" android:icon="@drawable/ic_share"
+        app:showAsAction="always"
+        android:title="分享"/>
 </menu>
